# OS_Krainova_213

Lab_2_OS/: lab2  lab2.c  lab2.h  lab2_main.c
Lab_3_OS/: client  client.c  server  server.c
Lab_4_OS/: CMakeLists.txt
Lab_4_OS/include/: contract.h
Lab_4_OS/src/: lib1_v1.c  lib1_v2.c  lib2_v1.c  lib2_v2.c  prog1_static.c  prog2_dynamic.c
